devops/k8s/backend.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: zirolet/multi-backend:latest
        resources:
          limits:
            memory: "5Gi"   # Maximum memory allowed
            cpu: "2"         # Maximum CPU cores allowed
          requests:
            memory: "2Gi"   # Initial memory request
            cpu: "0.1"         # Initial CPU cores request
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service

metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
