devops/k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: zirolet/multi-frontend:latest
        resources:
          limits:
            memory: "5Gi"   # Maximum memory allowed
            cpu: "2"         # Maximum CPU cores allowed
          requests:
            memory: "2Gi"   # Initial memory request
            cpu: "0.1"         # Initial CPU cores request
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
